<resources>
    <string name="app_name" translatable="false">Holla</string>
    <string name="unknown_error">Unknown error</string>
    <string name="sign_in_cancelled">Sign-in canceled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="sign_out">Sign out</string>
    <string name="hint_type_message">Type message…</string>
    <string name="content_desc_logo">Logo</string>
    <string name="content_desc_profile_picture">Profile picture</string>
    <string name="default_bio">Hey there, am using Holla</string>
    <string name="content_desc_retry">Retry</string>
    <string name="empty_list_text">No records found</string>
    <string name="search">Search</string>
    <string name="default_name">Receiver Name</string>

    <string name="and">and</string>
    <string name="left">left</string>
    <string name="ago">ago</string>
    <string name="year_abbrev">yr</string>
    <string name="month_abbrev">mon</string>
    <string name="week_abbrev">wk</string>
    <string name="hour_abbrev">hr</string>
    <string name="minute_abbrev">min</string>
    <string name="second_abbrev">sec</string>
    <string name="millisecond_abbrev">ms</string>
    <string name="millisecond">millisecond</string>
    <string name="second">second</string>
    <string name="minute">minute</string>
    <string name="hour">hour</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="date_unspecified">Unspecified</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="toolbar_title_profile">Account Profile</string>
    <string name="toolbar_title_edit_profile">Edit Profile</string>
    <string name="toolbar_title_message_list">Messages</string>
    <string name="toolbar_title_message">Compose Message</string>
    <string name="toolbar_title_contact_list">Contacts</string>
    <string name="no_conversations">No conversations yet! Press the button at the bottom-right of
        the screen to start a chat</string>
    <string name="loading_conversations">Loading conversations…</string>
    <string name="no_contacts">None of your contacts is registered with %1$s yet!</string>
    <string name="no_messages"><![CDATA[No messages yet! Compose & send a new one below]]></string>
    <string name="content_desc_attach_file">Attach file</string>
    <string name="content_desc_send_message">Send message</string>
    <string name="read_contacts_permission_required">Read contacts permission is required!</string>
    <string name="allow">Allow</string>
    <string name="loading">Loading…</string>
    <string name="message_required">Message required!</string>
    <string name="message_too_long">Message too long</string>
    <string name="channel_name">New Chat</string>
    <string name="channel_description">New chat sent to you from your contacts</string>
    <string name="default_notification_channel_id">Holla Notification Channel</string>
    <string name="content_description_media">media</string>
    <string name="internal_storage">Internal storage</string>
    <string name="content_desc_remove_image">Remove image</string>
</resources>
